<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_ros2_package</name>
  <version>0.0.1</version>
  <description>A generic ROS 2 package template.</description>

  <!-- Maintainer info -->
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Core build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Common runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- Add sensor/vision dependencies only if needed -->
  <!-- <depend>sensor_msgs</depend> -->
  <!-- <depend>cv_bridge</depend> -->
  <!-- <depend>image_transport</depend> -->
  <!-- <depend>OpenCV</depend> -->

  <!-- For custom message/service/action definitions -->
  <!-- <build_depend>rosidl_default_generators</build_depend> -->
  <!-- <exec_depend>rosidl_default_runtime</exec_depend> -->
  <!-- <member_of_group>rosidl_interface_packages</member_of_group> -->

  <!-- Optional test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
